# recipes

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  LICENSE.md  Makefile  Pulumi.dev.yaml  Pulumi.recipes-dev.yaml  Pulumi.yaml  README.md  __main__.py  chaperone.conf  nginx.conf  pyproject.toml  scrapinghub.yml  scrapy.cfg  scrapyd.conf
infra/: main.py
recipes/: __init__.py  items.py  middlewares.py  pipelines.py  recipe_scrapers_patch.py  settings.py
recipes/site_listers/: _101cookbooks.py  __init__.py  acouplecooks.py  allrecipes.py  ambitiouskitchen.py  archanaskitchen.py  averiecooks.py  bakingmischief.py  bakingsense.py  bbc.py  bbcgoodfood.py  bettycrocker.py  bonappetit.py  bowlofdelicious.py  budgetbytes.py  castironketo.py  closetcooking.py  cookeatshare.py  cookieandkate.py  cookstr.py  eatingbirdfood.py  eatsmarter.py  eatwhattonight.py  epicurious.py  food.py  foodnetwork.py  foodrepublic.py  forksoverknives.py  gimmesomeoven.py  gonnawantseconds.py  greatbritishchefs.py  halfbakedharvest.py  headbangerskitchen.py  hellofresh.py  hostthetoast.py  indianhealthyrecipes.py  innit.py  jamieoliver.py  jimcooksgoodfood.py  joyfoodsunshine.py  (+58 more)
recipes/spiders/: recipes.py
scraping/: __init__.py  items.py  middlewares.py  pipelines.py  recipe_scrapers_patch.py  settings.py  site_listers.py
scraping/data/: hellofresh_recipe_sitemap.xml
scraping/site_listers/: _101cookbooks.py  __init__.py  acouplecooks.py  allrecipes.py  ambitiouskitchen.py  archanaskitchen.py  averiecooks.py  bakingmischief.py  bakingsense.py  base.py  bbc.py  bbcgoodfood.py  bettycrocker.py  bonappetit.py  bowlofdelicious.py  budgetbytes.py  castironketo.py  closetcooking.py  cookeatshare.py  cookieandkate.py  cookstr.py  eatingbirdfood.py  eatsmarter.py  eatwhattonight.py  food.py  (+74 more)
(+1 files in other folders)
